--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,12 +6,12 @@ WORKDIR /app
 
 # Salin file dan install dependencies
 COPY package*.json ./
-RUN npm install --production
+RUN npm ci --only=production
 
 COPY . .
 
 # EXPOSE port sesuai yang digunakan app.listen
-EXPOSE 5005
+EXPOSE 5010
 
 # Jalankan aplikasi
 CMD ["node", "index.js"]
