--- a/cloudbuild.backend.yaml
+++ b/cloudbuild.backend.yaml
@@ -1,12 +1,12 @@
 steps:
   # 1. Build Docker image untuk backend
   - name: "gcr.io/cloud-builders/docker"
-    args: ["build", "-t", "gcr.io/$PROJECT_ID/notes-backendProjectC13", "."]
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/notes-backend-projectc13", "."]
     dir: "backend"
 
   # 2. Push ke Container Registry / Artifact Registry
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/$PROJECT_ID/notes-backendProjectC13"]
+    args: ["push", "gcr.io/$PROJECT_ID/notes-backend-projectc13"]
 
   # 3. Deploy ke Cloud Run
   - name: "gcr.io/cloud-builders/gcloud"
@@ -15,9 +15,9 @@ steps:
       [
         "run",
         "deploy",
-        "notes-backendProjectC13",
+        "notes-backend-projectc13",
         "--image",
-        "gcr.io/$PROJECT_ID/notes-backendProjectC13",
+        "gcr.io/$PROJECT_ID/notes-backend-projectc13",
         "--timeout",
         "1000s",
         "--port",
